--- a/dot-config/lazygit/config.yml
+++ b/dot-config/lazygit/config.yml
@@ -161,7 +161,7 @@ keybinding:
     undo: 'z'
     redo: '<c-z>'
     filteringMenu: '<c-s>'
-    diffingMenu: o'W'
+    diffingMenu: 'W'
     diffingMenu-alt: '<c-e>' # deprecated
     copyToClipboard: '<c-o>'
     submitEditorText: '<enter>'
