add tmux plugin manager (tpm)
Signed-off-by: kksat <22549266+kksat@users.noreply.github.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "nvim"]
 	path = dot-config/nvim/nvim
 	url = git@github.com:kksat/nvim.git
+[submodule "tpm"]
+	path = dot-tmux/plugins/tpm
+	url = git@github.com:tmux-plugins/tpm.git
