lazygit do not ask for confirmation when subprocess terminates
Signed-off-by: kksat <22549266+kksat@users.noreply.github.com>

--- a/dot-config/lazygit/config.yml
+++ b/dot-config/lazygit/config.yml
@@ -107,7 +107,7 @@ confirmOnQuit: false
 quitOnTopLevelReturn: false
 disableStartupPopups: false
 notARepository: 'prompt' # one of: 'prompt' | 'create' | 'skip' | 'quit'
-promptToReturnFromSubprocess: true # display confirmation when subprocess terminates
+promptToReturnFromSubprocess: false # display confirmation when subprocess terminates
 keybinding:
   universal:
     quit: 'q'
