ignore files and folders
that should not be placed in home directory

Signed-off-by: kksat <22549266+kksat@users.noreply.github.com>

--- a/.stowrc
+++ b/.stowrc
@@ -5,4 +5,8 @@
 --ignore .gitmodules
 --ignore LICENSE
 --ignore test
---ignore .devcontainer/
+--ignore install.sh
+--ignore .DS_store
+--ignore .gitignore
+--ignore .gitmodules
+--ignore .devcontainer
