add ssh server to fedora container
Signed-off-by: kksat <22549266+kksat@users.noreply.github.com>

--- a/.devcontainer/fedora/devcontainer.json
+++ b/.devcontainer/fedora/devcontainer.json
@@ -1,4 +1,9 @@
 {
   "name": "Fedora",
   "image": "fedora:41",
+  "features": {
+    "ghcr.io/devcontainers/features/sshd:1": {
+      "version": "latest"
+    }
+  }
 }
