--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tpm"]
 	path = dot-tmux/plugins/tpm
 	url = git@github.com:tmux-plugins/tpm.git
+[submodule "nvim"]
+	path = dot-config/nvim
+	url = git@github.com:kksat/nvim.git
