--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -1,5 +1,7 @@
 set -g base-index 1
 
+set-option -g allow-rename off
+
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
