--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -1,5 +1,6 @@
 set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin"
 set -g base-index 1
+set -g @plugin 'tmux-plugins/tpm'
 
 set-option -g allow-rename off
 
@@ -22,3 +23,4 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
+run '~/.tmux/plugins/tpm/tpm'
