--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -1,6 +1,7 @@
 set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin"
 set -g base-index 1
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set-option -g allow-rename off
 
