--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -2,6 +2,7 @@ set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin"
 set -g base-index 1
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin "janoamaral/tokyo-night-tmux"
 
 set-option -g allow-rename off
 
