--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -3,6 +3,7 @@ set -g base-index 1
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin 'schasse/tmux-jump'
 
 set-option -g allow-rename off
 
