activate mouse in tmux configuration
Signed-off-by: kksat <22549266+kksat@users.noreply.github.com>

--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -6,6 +6,7 @@ set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin 'schasse/tmux-jump'
 
 set-option -g allow-rename off
+set-option -g mouse on
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
