--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -7,6 +7,7 @@ set -g @plugin 'schasse/tmux-jump'
 
 set-option -g allow-rename off
 set-option -g mouse on
+set-option -g set-clipboard on
 
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 run '~/.tmux/plugins/tpm/tpm'
