ignore dot-config/nvim .git content
Signed-off-by: kksat <22549266+kksat@users.noreply.github.com>

--- a/.stowrc
+++ b/.stowrc
@@ -10,3 +10,5 @@
 --ignore .gitignore
 --ignore .gitmodules
 --ignore .devcontainer
+--ignore dot-config/nvim/.git
+--ignore dot-config/nvim/.gitignore
