--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -8,6 +8,7 @@ set -g @plugin 'schasse/tmux-jump'
 set-option -g allow-rename off
 set-option -g mouse on
 set-option -g set-clipboard on
+set -g renumber-windows on
 setw -g mode-keys vi
 
 bind-key -T copy-mode-vi 'C-\' select-pane -l
