ignore aerc accounts configuration
Signed-off-by: kksat <22549266+kksat@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ dot-tmux/plugins/tmux-sensible
 dot-tmux/plugins/tokyo-night-tmux
 dot-tmux/plugins/tmux-jump
 dot-config/nvim
+dot-config/aerc/accounts.conf
