add keymap for gemini
Signed-off-by: kksat <22549266+kksat@users.noreply.github.com>

--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -12,4 +12,6 @@ set -g renumber-windows on
 setw -g mode-keys vi
 
 bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+bind-key g display-popup -w 100% -h 100% -E "source ~/.secrets && gemini"
 run '~/.tmux/plugins/tpm/tpm'
