add keymap for keys fuzzy find
Signed-off-by: kksat <22549266+kksat@users.noreply.github.com>

--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -14,4 +14,7 @@ setw -g mode-keys vi
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 bind-key g display-popup -w 100% -h 100% -E "source ~/.secrets && gemini"
+
+bind-key k display-popup -w 100% -h 100% -E "tmux list-keys | fzf"
+
 run '~/.tmux/plugins/tpm/tpm'
