--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -10,6 +10,7 @@ set-option -g mouse on
 set-option -g set-clipboard on
 set -g renumber-windows on
 setw -g mode-keys vi
+set -g escape-time 0
 
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
