--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -11,6 +11,7 @@ set-option -g set-clipboard on
 set -g renumber-windows on
 setw -g mode-keys vi
 set -g escape-time 0
+set -g history-limit 10000
 
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
