signoff empty commits as well
Signed-off-by: kksat <22549266+kksat@users.noreply.github.com>

--- a/dot-config/lazygit/config.yml
+++ b/dot-config/lazygit/config.yml
@@ -261,7 +261,7 @@ customCommands:
         key: "Commit"
         initialValue: ""
     description: "Add empty commit"
-    command: "git commit --allow-empty -m '{{ .Form.Commit }}'"
+    command: "git commit --signoff --allow-empty -m '{{ .Form.Commit }}'"
   - key: "I"
     context: "files"
     prompts:
