--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -19,9 +19,9 @@ bind-key g display-popup -w 100% -h 100% -E "source ~/.secrets && gemini"
 
 bind-key k display-popup -w 100% -h 100% -E "tmux list-keys | fzf"
 
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+bind -n 'C-b C-h' select-pane -L
+bind -n 'C-b C-j' select-pane -D
+bind -n 'C-b C-k' select-pane -U
+bind -n 'C-b C-l' select-pane -R
 
 run '~/.tmux/plugins/tpm/tpm'
