--- a/dot-config/aerc/aerc.conf
+++ b/dot-config/aerc/aerc.conf
@@ -587,7 +587,7 @@
 # html emails.
 #
 # Default: text/plain,text/html
-#alternatives=text/plain,text/html
+alternatives=text/html
 
 #
 # Default setting to determine whether to show full headers or only parsed
