--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -5,7 +5,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin 'schasse/tmux-jump'
 
-set-option -g allow-rename off
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
 set-option -g mouse on
 set-option -g set-clipboard on
 set -g renumber-windows on
