adopt codex configuration
Signed-off-by: Kirill Satarin <22549266+kksat@users.noreply.github.com>

--- a/dot-codex/config.toml
+++ b/dot-codex/config.toml
@@ -1,10 +1,12 @@
 model = "gpt-5.2-codex"
+model_provider = "azure"
 model_reasoning_effort = "high"
 tool_output_token_limit = 25000
 # Leave room for native compaction near the 272–273k context window.
 # Formula: 273000 - (tool_output_token_limit + 15000)
 # With tool_output_token_limit=25000 ⇒ 273000 - (25000 + 15000) = 233000
 model_auto_compact_token_limit = 233000
+
 [features]
 ghost_commit = false
 unified_exec = true
@@ -15,3 +17,7 @@ shell_snapshot = true
 
 [projects."~/dev/"]
 trust_level = "trusted"
+
+[notice.model_migrations]
+gpt-5-codex = "gpt-5.2-codex"
+"gpt-5.1-codex-max" = "gpt-5.2-codex"
