--- a/dot-codex/config.toml
+++ b/dot-codex/config.toml
@@ -6,6 +6,7 @@ tool_output_token_limit = 25000
 # Formula: 273000 - (tool_output_token_limit + 15000)
 # With tool_output_token_limit=25000 ⇒ 273000 - (25000 + 15000) = 233000
 model_auto_compact_token_limit = 233000
+stream_max_retries = 10
 
 [features]
 ghost_commit = false
