add env variables for codex
Signed-off-by: Kirill Satarin <22549266+kksat@users.noreply.github.com>

--- a/dot-codex/config.toml
+++ b/dot-codex/config.toml
@@ -16,6 +16,9 @@ web_search_request = true
 skills = true
 shell_snapshot = true
 
+[shell_environment_policy]
+set = { LLM = "1" }
+
 [projects."~/dev/"]
 trust_level = "trusted"
 
