never show tab bar in ghostty
Signed-off-by: Kirill Satarin <22549266+kksat@users.noreply.github.com>

--- a/dot-config/ghostty/config
+++ b/dot-config/ghostty/config
@@ -1,4 +1,5 @@
 command = /opt/homebrew/bin/tmux
 font-family = "Fira Code"
 macos-titlebar-proxy-icon = hidden
+window-show-tab-bar = never
 title = " "
